# advent-of-code-2023

01/: tests.py
05/: foo.py  tests.py
06/: foo.py
07/: bar.py  foo.py
08/: pyproject.toml
1/: foo.py
10/: foo.py  tests.py
11/: foo.py  tests.py
13/: foo.py  tests.py
14/: foo.py  tests.py
15/: foo.py  tests.py
16/: bar.py  foo.py  tests.py
16b/: foo.py  tests.py
19/: foo.py  tests.py
2/: foo.py  tests.py
20/: foo.py  tests.py
21/: foo.py  tests.py
23/: foo.py  pyproject.toml  tests.py
24/: foo.py  foo_.py  pyproject.toml  tests.py
3/: foo.py  tests.py
5/: todo.txt
6/: tests.py
7/: tests.py
8/: foo.py  tests.py
9/: foo.py  tests.py
