[tool.poetry]
name = "21"
version = "0.1.0"
description = ""
authors = ["Dan Steeves <dan@thesteeves.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
networkx = "^3.2.1"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
