[tool.poetry]
name = "24"
version = "0.1.0"
description = ""
authors = ["Dan Steeves <dan@thesteeves.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"


[tool.poetry.group.dev.dependencies]
scikit-spatial = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
